fixed issue with using hashes in urls (the top of the page was getting cut off) sadly, this does break having columns of equal height; version 1.0.16)

--- a/style.less
+++ b/style.less
@@ -2,7 +2,7 @@
 Theme Name: moznews
 Theme URI: http://moznews.org/
 Description: A theme by Leo McArdle for moznews.org.
-Version: 1.0.15
+Version: 1.0.16
 Author: Leo McArdle
 Author URI: http://wiki.mozilla.org/User:Leo_McArdle
 */
@@ -66,7 +66,7 @@ h3 {
 p {
 	line-height: 1.5;
 	margin: 0 0 10px 0;
-	
+
 	a, a:hover, a:visited, a:active, a:focus {
 		color: #163754;
 	}
@@ -119,26 +119,26 @@ header {
 		margin: 12px 5px;
 		float: left;
 	}
-	
+
 	nav {
 		float: right;
 		font-size: 13px;
 		margin: 18px 5px;
-		
+
 		ul, li, h1, h2, div {
 			font-size: inherit;
 			display: inline;
 			color: inherit;
 		}
-		
+
 		li:before {
-    	content: " • ";
+			content: " • ";
 		}
 
 		li:nth-of-type(1):before {
-    	content: "";
+			content: "";
 		}
-		
+
 		img {
 			margin: -6px 5px;
 		}
@@ -147,7 +147,6 @@ header {
 
 section {
 	background: #bfdee8;
-	overflow: hidden;
 	.box-shadow(0, 0, 10px, 1px, #000);
 	position: relative;
 	z-index: 2;
@@ -166,7 +165,7 @@ aside.left {
 	float: left;
 	padding: 15px 15px 0 0;
 	clear: left;
-	
+
 	div.day {
 			font-size: 42px;
 	}
@@ -198,9 +197,6 @@ div.content {
 	width: 756px;
 	background: #fff url("img/content_shadow.png");
 	overflow: hidden;
-	float: left;
-	padding-bottom: 9999px;
-	margin-bottom: -9999px;
 }
 
 a.titlebox {
@@ -222,7 +218,7 @@ a.titlebox {
 		height: 165px;
 		overflow: hidden;
 	}
-		
+
 	p {
 		display: none;
 		margin: 5px;
@@ -232,27 +228,27 @@ a.titlebox {
 		overflow: hidden;
 		line-height: 15px;
 	}
-		
+
 	time {
 		float: left;
 		margin: 5px;
 	}
-		
+
 	span {
 		color: #163754;
 		float: right;
 		margin: 5px;
 	}
 }
-	
+
 a.titlebox:hover, a.titlebox:focus {
 	background: #fff;
 	.box-shadow(0, 0, 5px, 1px, #6e685e);
-		
+
 	h1 {
 		display: none;
 	}
-	
+
 	p {
 		display: block;
 	}
@@ -266,7 +262,7 @@ aside.right {
 	float: right;
 	width: 138px;
 	padding: 15px 0 0 15px;
-	
+
 	h1, h2, h3, h4, h5, h6, h7, h8 {
 		color: inherit;
 	}
@@ -278,11 +274,11 @@ footer {
 	color: #fff;
 	text-shadow: 0 -1px 0 #000;
 	padding: 15px 0;
-	
+
 	h1, h2, h3, h4, h5, h6, h7, h8 {
 		color: inherit;
 	}
-	
+
 	a, a:hover, a:active, a:visited, a:focus {
 		color: #bfdee8;
 	}
